<resources>
    <string name="app_name" translatable="false">Jokesby</string>
    <string name="authority" translatable="false">com.roguekingapps.jokesby</string>
    <string name="joke" translatable="false">joke</string>
    <string name="favourite" translatable="false">favourite</string>
    <string name="parameter_placeholder" translatable="false">=?</string>
    <string name="unknown_uri" translatable="false">Unknown uri: </string>
    <string name="insert_row_failed" translatable="false">Failed to insert row into </string>
    <string name="list_fragment_tag" translatable="false">listFragmentTag</string>
    <string name="detail_joke_fragment_tag" translatable="false">detailJokeFragmentTag</string>
    <string name="hot_joke_fragment_tag" translatable="false">hotJokeFragmentTag</string>
    <string name="random_joke_fragment_tag" translatable="false">randomJokeFragmentTag</string>
    <string name="favourite_joke_fragment_tag" translatable="false">favouriteJokeFragmentTag</string>
    <string name="rated_joke_fragment_tag" translatable="false">ratedJokeFragmentTag</string>
    <string name="sad_emoticon" translatable="false">sad emoticon</string>
    <string name="neutral_emoticon" translatable="false">neutral emoticon</string>
    <string name="surprised_emoticon" translatable="false">surprised emoticon</string>
    <string name="tongue_out_emoticon" translatable="false">tongue out emoticon</string>
    <string name="happy_emoticon" translatable="false">happy emoticon</string>
    <string name="laugh_emoticon" translatable="false">laugh emoticon</string>
    <string name="result_code" translatable="false">result code</string>
    <string name="initial_load" translatable="false">initialLoad</string>
    <string name="shared_preferences" translatable="false">shared_preferences</string>
    <string name="consent_given" translatable="false">consent_given</string>
    <string name="favourites">Favorites</string>
    <string name="hot">Hot</string>
    <string name="random">Random</string>
    <string name="jokes_not_loaded">Jokes could not be loaded.</string>
    <string name="error_add_favourite">Could not add favorite. Please try again.</string>
    <string name="error_query_favourite">Could not access favorites.</string>
    <string name="error_query_api">Could not load jokes. Please try again.</string>
    <string name="submitted_by">Submitted by&#xA0;</string>
    <string name="share_via">Share via</string>
    <string name="shared_via_jokesby">\n\nShared via Jokesby</string>
    <string name="rated">Rated</string>
    <string name="add_favourites">Add some favorites.</string>
    <string name="rate_jokes">Jokes you rate will be shown here.</string>
    <string name="share">Share</string>
    <string name="content_disclaimer">Jokesby does not filter the content posted to Reddit. \n\nDue to the possibility of jokes of an adult nature being posted to Reddit, Jokesby is designed for adults only and may include material that some users may find offensive. \n\nIf you are under the age of 18 or if such material offends you please DO NOT use this app.</string>
    <string name="reddit_registered_trademark">Reddit is a registered trademark owned by Reddit, Inc.</string>
    <string name="continue_to_use">Continue</string>
    <string name="content_disclaimer_title">Content Disclaimer</string>
    <string name="exit">Exit</string>
</resources>
