<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_hot"
        android:enabled="true"
        android:icon="@drawable/ic_hot_black"
        android:title="@string/hot"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_random"
        android:enabled="true"
        android:icon="@drawable/ic_laugh"
        android:title="@string/random"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favourite_black"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rated"
        android:enabled="true"
        android:icon="@drawable/ic_star_black"
        android:title="@string/rated"
        app:showAsAction="ifRoom" />

</menu>