<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.roguekingapps.jokesby.ui.main.fragment.DisclaimerDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/disclaimer_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/disclaimer_scroll_view_margin_bottom"
            android:layout_marginEnd="@dimen/disclaimer_scroll_view_margin"
            android:layout_marginStart="@dimen/disclaimer_scroll_view_margin"
            android:layout_marginTop="@dimen/disclaimer_scroll_view_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/disclaimer_text_view_margin"
                    android:text="@string/content_disclaimer_title"
                    android:textSize="@dimen/disclaimer_text_view_title_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/disclaimer_text_view_margin"
                    android:text="@string/content_disclaimer"
                    android:textSize="@dimen/disclaimer_text_view_body_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reddit_registered_trademark"
                    android:textSize="@dimen/disclaimer_text_view_trademark_text_size" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/disclaimer_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/disclaimer_scroll_view"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/disclaimer_exit_button"
                style="@style/DisclaimerButton"
                android:text="@string/exit" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/disclaimer_continue_button"
                style="@style/DisclaimerButton"
                android:text="@string/continue_to_use" />

        </LinearLayout>
    </RelativeLayout>
</layout>